[gd_scene load_steps=4 format=3 uid="uid://cltpplvspfo8e"]

[ext_resource type="PackedScene" uid="uid://cal7hqsuxreg1" path="res://objects/blocks/base_block.tscn" id="1_uj2rw"]
[ext_resource type="Script" path="res://objects/blocks/hittable_block/hittable_block.gd" id="2_ewj8q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4itqg"]
size = Vector2(16, 16)

[node name="HittableBlock" instance=ExtResource("1_uj2rw")]
script = ExtResource("2_ewj8q")
wait_time = 0.1

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(20, 20.5)

[node name="Area2D" type="Area2D" parent="." index="2"]
visible = false
position = Vector2(20, 20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource("RectangleShape2D_4itqg")

[node name="BounceTimer" type="Timer" parent="." index="3"]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
